
		CHANGES in `multcomp' VERSION 0.992-9

    o    remove deprecated functions simint and simtest (the files
         are still available from multcomp/inst/deprecated)

    o    better error message when factors specified in mcp() aren't
         found in model


		CHANGES in `multcomp' VERSION 0.992-8

    o    add model.frame and model.matrix methods for class `lme'
         (feature request by Antonio Rausell <arausell@cnio.es>)

    o    new data set `trees513'


		CHANGES in `multcomp' VERSION 0.992-7

    o    new contrasts `UmbrellaWilliams' and `GrandMean'
         (thanks to Daniel Gerhard <gerhard@biostat.uni-hannover.de>)


		CHANGES in `multcomp' VERSION 0.992-6

    o    add support for lme4::(g)lmer2 objects (thanks to Manuel Eugster)

    o    coef. and vcov. didn't always pass through, spotted by
         John Deke <jdeke73@gmail.com>


		CHANGES in `multcomp' VERSION 0.992-5

    o    remove non_function entries in Rd files


		CHANGES in `multcomp' VERSION 0.992-4

    o    update to mvtnorm 0.8-0


		CHANGES in `multcomp' VERSION 0.992-3

    o    better support for `mer', `lmer' and `glmer' objects
         (package `lme4')


		CHANGES in `multcomp' VERSION 0.992-2

    o    add support for `lme' objects (feature request by
         John Wilkinson <jnwilks@btinternet.com> and Dieter Menne
         <dieter.menne@menne-biomed.de>)


		CHANGES in `multcomp' VERSION 0.992-1

    o    fix LaTeX problem in vignette (spotted by Brian D. Ripley)


		CHANGES in `multcomp' VERSION 0.991-9

    o    fix some minor problems spotted for plotting or
         printing of confidence intervals (thanks for Rich Heiberger and
         Ludwig Hothorn)


		CHANGES in `multcomp' VERSION 0.991-8

    o    make sure `type' is available

    o    catch errors with `aovlist' objects

    o    print for confint method indicates if confidence 
         intervals are adjusted or univariate


		CHANGES in `multcomp' VERSION 0.991-7
